# llmsec

./: .gitignore  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
llmsec/: __init__.py  check_prompt.py  check_prompt_result.py  cli.py  llmsec.py
llmsec/data/: harmful_behaviors.csv
tests/: __init__.py  httpretty_mocks.py  test_check_prompt.py  test_check_prompt_result.py  test_llmsec.py
